--- a/braveu/server/config.env
+++ b/braveu/server/config.env
@@ -1,6 +1,6 @@
 PORT = 3001
 
-DATABASE = mongodb+srv://admin:admin@cluster0.ugwwu.mongodb.net/braveu?retryWrites=true&w=majority
+DATABASE = mongodb+srv://admin:admin@cluster0.ugwwu.mongodb.net/login?retryWrites=true&w=majority
 
 SECURE_KEY = youcanchooseanysecretkeyofcharacter
 
